Fix jumping header on mobile

--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -77,7 +77,7 @@ h1 {
 .Header span {
     display: block;
     font-family: authentic_bold;
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     margin-bottom: 1rem;
 }
 
